Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-15914

Populate the file revision map at initialization to avoid potential race conditions

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 3.1.1, 4.0.0
    • 3.0.3
    • couchbase-bucket
    • Security Level: Public
    • None
    • Untriaged
    • Unknown

    Description

      Populate the file revision map for all couchkvstore instances as part of bucket creation or warmup, rather than lazily. Refactoring this code would also ensure that only writer threads (in focus: compaction and vb-deletion) - delete vbucket files, and not the reader/auxIO threads.

      The fix is intended for 3.1.1.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              abhinav Abhi Dangeti
              abhinav Abhi Dangeti
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty